--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DjangoChat</title>
-</head>
-<body>
-    <p>Hey guys, aj hum chat app bnaege</p>
-</body>
-</html>
+{% extends 'chat/layout.html' %}
+
+{% block body %}
+<h1>Welcome to the chat room</h1><br/>
+{% endblock %}
