--- a/chat/templates/chat/layout.html
+++ b/chat/templates/chat/layout.html
@@ -27,20 +27,9 @@
           Product
         </button>
 
-        <!--
-          'Product' flyout menu, show/hide based on flyout menu state.
-
-          Entering: "transition ease-out duration-200"
-            From: "opacity-0 translate-y-1"
-            To: "opacity-100 translate-y-0"
-          Leaving: "transition ease-in duration-150"
-            From: "opacity-100 translate-y-0"
-            To: "opacity-0 translate-y-1"
-        -->
         <div class="absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-white shadow-lg ring-1 ring-gray-900/5">
-          
         </div>
-      </div>
+    </div>
 
       <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features</a>
       <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Marketplace</a>
@@ -106,7 +95,15 @@
       </div>
     </div>
   </div>
+
 </header>
+
+<div class="text-center p-20">
+    <h1 class="lg:text-6xl text-white">Django Chat</h1>
+</div>
+
+{% block body %}
+{% endblock %}
 
 </body>
 </html>
