--- a/chat/templates/chat/layout.html
+++ b/chat/templates/chat/layout.html
@@ -36,8 +36,13 @@
       <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Company</a>
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end flex space-x-2">
-        <a href="#" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Sign up</a>
-      <a href="#" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Log in <span aria-hidden="true">&rarr;</span></a>
+        {% if request.user.is_authenticated %}
+            <a href="#" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Rooms</a>
+            <a href="/logout/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Logout</a>
+        {% else %}
+            <a href="/signup/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Sign up</a>
+            <a href="/login/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Log in <span aria-hidden="true">&rarr;</span></a>
+        {% endif %}
       
     </div>
   </nav>
