--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,5 +1,10 @@
 {% extends 'chat/layout.html' %}
 
 {% block body %}
+<div class="text-center p-20">
+    <h1 class="lg:text-6xl text-white">Django Chat</h1>
+</div>
+
+
 <h1>Welcome to the chat room</h1><br/>
 {% endblock %}
