--- a/rooms/templates/rooms/room.html
+++ b/rooms/templates/rooms/room.html
@@ -1,11 +1,19 @@
 {% extends "chat/layout.html" %}
 
 {% block body %}
-    {% for room in rooms %}
-        <div>
-            <h2>{{ room }}</h2>
-            <a href="{% url 'room_detail' room.slug %}">Join</a>
-        </div>
-           
-    {% endfor %}
+
+    <div class="p-10 lg:p-20 text-center">
+        <h1 class="text-3xl lg: text-6xl text-white">Rooms</h1>
+    </div>
+    
+    <div class="w-full flex flex-wrap items-center">
+        {% for room in rooms %}
+            <div class="w-full lg:w-1/4 px-3 py-3">
+                <div class="p-4 bg-white shadow rounded-xl text-center">
+                    <h2 class="mb-5 text-2xl font-semibold">{{ room }}</h2>
+                    <a href="{% url 'room_detail' room.slug %}" class="px-5 py-3 block rounded-xl text-white bg-teal-600 hover:bg-teal-700">Join</a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
