--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,5 +1,7 @@
 {% extends 'chat/layout.html' %}
 
+{% block title %}Welcome{% endblock %}
+
 {% block body %}
 <div class="text-center p-20">
     <h1 class="lg:text-6xl text-white">Django Chat</h1>
