--- a/chat/templates/chat/layout.html
+++ b/chat/templates/chat/layout.html
@@ -20,7 +20,7 @@
     
     <div class="hidden lg:flex lg:flex-1 lg:justify-end flex space-x-2">
         {% if request.user.is_authenticated %}
-            <a href="#" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Rooms</a>
+            <a href="/rooms/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Rooms</a>
             <a href="/logout/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Logout</a>
         {% else %}
             <a href="/signup/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Sign up</a>
